<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#186F69"
    android:orientation="vertical"
    tools:context=".Take_a_Quiz">

    <TextView
        android:id="@+id/title"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="80sp"
        android:textColor="#EAEAEA"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/Bcreate"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:background="@drawable/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:text="@string/create"
        android:textColor="#EAEAEA"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/BAnalyze"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:background="@drawable/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/analyze"
        android:textColor="#EAEAEA"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/BEdit"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:background="@drawable/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/edit"
        android:textColor="#EAEAEA"
        android:textSize="25sp"/>



</LinearLayout>