<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#186F69"
    android:orientation="vertical"
    tools:context=".LogIn">

    <TextView
        android:id="@+id/title"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="80sp"
        android:textColor="#EAEAEA"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/ediittext"
        android:layout_marginTop="90dp"
        android:hint="@string/email"
        android:textColorHint="#EAEAEA"
        android:textSize="25sp"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColorHint="#EAEAEA"
        android:textSize="25sp"
        android:textColor="#EAEAEA"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/ediittext"
        android:layout_marginTop="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/LogIn"
            android:text="@string/log_in"
            android:textSize="25sp"
            android:textColor="#EAEAEA"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@drawable/button2"/>

        <Button
            android:id="@+id/signUp"
            android:text="@string/sign_up"
            android:textSize="25sp"
            android:textColor="#EAEAEA"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/button2"/>
    </RelativeLayout>







</LinearLayout>