<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#186F69"
    android:orientation="vertical"
    tools:context=".student">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="#EAEAEA"
        android:textSize="80sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/take_a_quiz"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:background="@drawable/button2"
        android:text="@string/take_a_quiz"
        android:textColor="#EAEAEA"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/viewGrades"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:background="@drawable/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:text="@string/view_grades"
        android:textColor="#EAEAEA"
        android:textSize="25sp"/>


</LinearLayout>