<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#085852"
    tools:context="com.example.kaitlynchandler.quizit2.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#EAEAEA"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IAm"
        android:text="@string/i_am_a"
        android:textColor="#EAEAEA"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.168"
        app:layout_constraintHorizontal_bias="0.116" />
    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@drawable/button"
        android:id="@+id/teacher"
        android:text="@string/teacher"
        android:textColor="#EAEAEA"
        android:textSize="20sp"
        tools:layout_editor_absoluteY="287dp"
        tools:layout_editor_absoluteX="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />
    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:id="@+id/student"
        android:background="@drawable/button"
        android:text="@string/student"
        android:textColor="#EAEAEA"
        android:textSize="20sp"
        tools:layout_editor_absoluteY="380dp"
        tools:layout_editor_absoluteX="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacher" />
</android.support.constraint.ConstraintLayout>
